kubernetes/Daemonset.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: httpd-daemonset
  labels:
    httpd: apache2
spec:
  selector:
    matchLabels:
      httpd: apache2
  template:
    metadata:
      name: httpd-pod
      labels:
        httpd: apache2
    spec:
      containers:
        - name: apache2
          image: httpd
          ports:
            - containerPort: 80
              hostPort: 8080
