kubernetes/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  labels:
    app: testing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: testing
  template:
    metadata:
      name: ci-cd
      labels:
        app: testing
    spec:
      containers:
        - name: jenkins-container
          image: jenkins/jenkins
          ports:
            - containerPort: 8080
              hostPort: 9090
