kubernetes/pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: proxy
spec:
  containers:
    - name: mynginx
      image: nginx
      ports:
        - containerPort: 80
          hostPort: 8080
