kubernetes/secret.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    type: datastorage
spec:
  containers:
    - name: database
      image: mysql
