kubernetes/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: example.books.com
      http:
        paths:
          path: /
          pathType: Prefix
          backend:
            service:
              name: apache-service
              ports:
                number: 80
